[package]
name = "kuiper"
description = "A blazing fast Integrated Development Environment, meant to give power back to developers."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kuiper_gui.workspace = true

tracing-subscriber.workspace = true 

[dev-dependencies]
console-subscriber = "0.4.0"

[workspace]
members = [ "gui" , "lsp"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Redhawk18"]
license = "MPL-2.0"

[workspace.dependencies]
kuiper_gui = { path = "gui" }
kuiper_lsp = { path = "lsp" }

async-lsp = { version = "0.2" }
futures = "0.3"
iced = { version = "0.13.1", features = ["advanced", "tokio"] }
iced_aw = { version = "0.10", features = ["icons", "tab_bar"], default-features = false }
iced_runtime = "0.13.2"
pattern_code = "0.1"
rfd = { version = "0.15", features = ["xdg-portal", "tokio"], default-features = false}
slotmap = "1.0"
snafu = "0.8"
tokio = { version = "1", features = ["fs", "process", "tracing"] }
tokio-util = { version = "0.7", features = ["compat"] }
tower = "0.4"
tracing = "0.1"
tracing-subscriber =  { version = "0.3", features = ["env-filter"] }

[patch.crates-io]
# iced = { git = 'https://github.com/iced-rs/iced.git' }
# iced_aw = { git = 'https://github.com/iced-rs/iced_aw.git' }
