[package]
name = "kuiper"
description = "A blazing fast Integrated Development Environment, meant to give power back to developers."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kuiper_gui.workspace = true

tracing-subscriber.workspace = true 

[dev-dependencies]
console-subscriber = "0.4.0"

[workspace]
members = [ "gui" , "lsp"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Redhawk18"]
license = "MPL-2.0"

[workspace.dependencies]
kuiper_gui = { path = "gui" }
kuiper_lsp = { path = "lsp" }

async-lsp = { version = "0.2" }
futures = "0.3"
iced = { version = "0.14.0-dev", features = ["highlighter", "tokio"] }
iced_aw = { version = "0.12", features = [ "tab_bar"], default-features = false }
iced_fonts = { version = "0.2", features = ["full"] }
iced_runtime = "0.14.0-dev"
pattern_code = "0.2"
rfd = { version = "0.15" }
slotmap = "1.0"
snafu = "0.8"
tokio = { version = "1", features = ["fs", "process", "time", "tracing", "rt"] }
tokio-util = { version = "0.7", features = ["compat"] }
tower = "0.4"
tracing = "0.1"
tracing-subscriber =  { version = "0.3", features = ["env-filter"] }

[patch.crates-io]
# iced = { git = 'https://github.com/iced-rs/iced.git' }
iced = { path = "../iced/" }
# iced_core = { git = 'https://github.com/iced-rs/iced.git' }
iced_core = { path = "../iced/core" }
# iced_runtime = { git = 'https://github.com/iced-rs/iced.git' }
iced_runtime = { path = "../iced/runtime/" }
# iced_widget = { git = 'https://github.com/iced-rs/iced.git' }
iced_widget = { path = "../iced/widget/" }
# iced_aw = { git = 'https://github.com/redhawk18/iced_aw.git' }
iced_aw = { path = "../iced_aw/" }
# iced_fonts = { git = 'https://github.com/redhawk18/iced_fonts.git', branch = "next" }
iced_fonts = { path = "../iced_fonts/" }
