[package]
name = "blaze_gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blaze_core.workspace = true
dark-light.workspace = true
iced.workspace = true
iced_aw.workspace = true
log.workspace = true
rfd.workspace = true
slotmap.workspace = true