[package]
name = "kuiper_lsp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-lsp.workspace = true
iced.workspace = true
log.workspace = true
lsp-types.workspace = true
snafu.workspace = true
tokio.workspace = true
