[package]
name = "blaze-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blaze-core = { path = "../core" }
cursive-tabs = "0.7.0"
log = "0.4.20"

[dependencies.cursive]
version = "0.20.0"
default-features = false
features = ["crossterm-backend"]
